Project

General

Profile

Actions

Bug #21868

closed

Prism doesn't use the ruby allocator

Bug #21868: Prism doesn't use the ruby allocator

Added by byroot (Jean Boussier) 8 months ago. Updated 7 months ago.

Status:
Closed
Assignee:
Target version:
-
[ruby-core:124709]

Description

I discovered this while working on the internal side of [Feature #21861] (https://github.com/ruby/ruby/pull/15989)

Prism doesn't use ruby_xmalloc, but raw malloc.

I tried to fix it myself, but couldn't figure out the solution, so I left some FIXME comments:

I'd appreciate if someone from the Prism team could look at it.


Related issues 1 (0 open1 closed)

Related to Ruby - Feature #21861: C API: expose `ruby_xfree_sized`, `ruby_xrealloc_sized`, etcClosedActions
Actions

Also available in: PDF Atom