[Bug #21868] Use ruby allocator for prism

If we wan't prism to use the ruby allocator, we should
include it as early as possible.